# curl-impersonate

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  Makefile.in  README.md  browsers.json  configure  configure.ac  curl_impersonate_playground.ipynb  install.sh  mitmproxy_peet_ws.txt
.github/workflows/: build-and-test-make.yml  build-and-test.yml  build-android.yaml  build-docker.yml  build-push-docker.yml  build-win.yaml  build.yml  publish-docker-image.yml  release.yml  test.yml
.serena/: project.yml
.serena/memories/testing/: inspection-infrastructure.md
chrome/: curl_chrome127  curl_firefox135  curl_firefox135.bat  curl_safari17_5  curl_safari18_0
chrome/patches/: boringssl.patch  curl-impersonate.patch
cmake/: CheckFileContains.cmake  Uninstall.cmake.in
docker/: alpine.dockerfile  debian.dockerfile  dockerfile.mustache  generate.sh
docs/: 01_GETTING_STARTED.md  02_USAGE.md  03_LIBCURL_IMPERSONATE.md  03_LIBCURL_IMPERSONATE_JS.md  03_LIBCURL_IMPERSONATE_PHP.md  04_libcurl.md  Makefile  README.md  advanced.rst  api.rst  bindings.rst  building.rst  conf.py  curl-impersonate-flags.md  dev.rst  faq.rst  fingerprints.rst  index.rst  install.rst  pro.rst  pyproject.toml  quick_start.rst
patches/: OpenBSD.patch  boringssl.patch  curl.patch
scripts/: build-libidn2.sh
tests/: README.md  conftest.py  http3_targets.yaml  pytest.ini  requirements.txt  targets.yaml  test_impersonate.py
tests/signatures/: chrome_131.0.6778.86.yaml  chrome_133.0.6943.55.yaml  chrome_149.0.7827.102.yaml  chrome_150.0.7871.127_macOS.yaml  safari_18.0_iOS.yaml  safari_18.0_macOS.yaml  safari_26.0_iOS.yaml  safari_26.0_macOS.yaml  tor_14.5_macOS.yaml
win/: build.bat  build.sh  deps.patch  deps.sh
